test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:24:18: Unsupported: tagged union
   24 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:25:7: Unsupported: void (for tagged unions)
   25 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:30:18: Unsupported: tagged union
   30 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:31:7: Unsupported: void (for tagged unions)
   31 |       void          Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:39:18: Unsupported: tagged union
   39 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:40:7: Unsupported: void (for tagged unions)
   40 |       void        Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:46:18: Unsupported: tagged union
   46 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:50:13: Unsupported: tagged union
   50 |       union tagged {
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:60:18: Unsupported: tagged union
   60 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:61:7: Unsupported: void (for tagged unions)
   61 |       void    Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:66:18: Unsupported: tagged union
   66 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:67:7: Unsupported: void (for tagged unions)
   67 |       void      Invalid;
      |       ^~~~
%Error: t/t_tagged_if.v:84:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   84 |       v = tagged Invalid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:86:35: syntax error, unexpected ')', expecting '.' or tagged or .*
   86 |       if (v matches tagged Invalid)
      |                                   ^
%Error: t/t_tagged_if.v:93:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   93 |       v = tagged Valid (42);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:95:34: Unsupported: '{} tagged patterns
   95 |       if (v matches tagged Valid .n)
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged_if.v:95:21: Unsupported: '{} tagged patterns
   95 |       if (v matches tagged Valid .n)
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:95:13: Unsupported: matches operator
   95 |       if (v matches tagged Valid .n)
      |             ^~~~~~~
%Error: t/t_tagged_if.v:102:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  102 |       v = tagged Valid (100);
      |           ^~~~~~
%Error: t/t_tagged_if.v:104:35: syntax error, unexpected ')', expecting '.' or tagged or .*
  104 |       if (v matches tagged Invalid)
      |                                   ^
%Error: t/t_tagged_if.v:111:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  111 |       wt = tagged Wide60 (60'hFEDCBA987654321);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:113:36: Unsupported: '{} tagged patterns
  113 |       if (wt matches tagged Wide60 .w)
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:113:22: Unsupported: '{} tagged patterns
  113 |       if (wt matches tagged Wide60 .w)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:113:14: Unsupported: matches operator
  113 |       if (wt matches tagged Wide60 .w)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:120:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  120 |       wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:122:36: Unsupported: '{} tagged patterns
  122 |       if (wt matches tagged Wide90 .w)
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:122:22: Unsupported: '{} tagged patterns
  122 |       if (wt matches tagged Wide90 .w)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:122:14: Unsupported: matches operator
  122 |       if (wt matches tagged Wide90 .w)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:129:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  129 |       wt = tagged Byte8NonZeroLSB (8'hA5);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:131:45: Unsupported: '{} tagged patterns
  131 |       if (wt matches tagged Byte8NonZeroLSB .b)
      |                                             ^
%Error-UNSUPPORTED: t/t_tagged_if.v:131:22: Unsupported: '{} tagged patterns
  131 |       if (wt matches tagged Byte8NonZeroLSB .b)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:131:14: Unsupported: matches operator
  131 |       if (wt matches tagged Byte8NonZeroLSB .b)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:138:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  138 |       wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:140:48: Unsupported: '{} tagged patterns
  140 |       if (wt matches tagged Word32LittleEndian .w)
      |                                                ^
%Error-UNSUPPORTED: t/t_tagged_if.v:140:22: Unsupported: '{} tagged patterns
  140 |       if (wt matches tagged Word32LittleEndian .w)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:140:14: Unsupported: matches operator
  140 |       if (wt matches tagged Word32LittleEndian .w)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:147:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  147 |       at = tagged Arr '{10, 20, 30, 40};
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:149:33: Unsupported: '{} tagged patterns
  149 |       if (at matches tagged Arr .a)
      |                                 ^
%Error-UNSUPPORTED: t/t_tagged_if.v:149:22: Unsupported: '{} tagged patterns
  149 |       if (at matches tagged Arr .a)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:149:14: Unsupported: matches operator
  149 |       if (at matches tagged Arr .a)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:156:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  156 |       at = tagged Scalar (999);
      |            ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:158:36: Unsupported: '{} tagged patterns
  158 |       if (at matches tagged Scalar .s)
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:158:22: Unsupported: '{} tagged patterns
  158 |       if (at matches tagged Scalar .s)
      |                      ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:158:14: Unsupported: matches operator
  158 |       if (at matches tagged Scalar .s)
      |              ^~~~~~~
%Error: t/t_tagged_if.v:165:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  165 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |               ^~~~~~
%Error: t/t_tagged_if.v:167:36: syntax error, unexpected '(', expecting '.' or tagged or .*
  167 |       if (instr matches tagged Jmp (tagged JmpC '{cc:.c, addr:.a}))
      |                                    ^
%Error: t/t_tagged_if.v:174:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  174 |       instr = tagged Jmp (tagged JmpC '{2'd2, 10'd128});
      |               ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:176:36: Unsupported: '{} tagged patterns
  176 |       if (instr matches tagged Jmp .j &&&
      |                                    ^
%Error-UNSUPPORTED: t/t_tagged_if.v:176:25: Unsupported: '{} tagged patterns
  176 |       if (instr matches tagged Jmp .j &&&
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_if.v:176:17: Unsupported: matches operator
  176 |       if (instr matches tagged Jmp .j &&&
      |                 ^~~~~~~
%Error: Exiting due to
